objects/Quote.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Rider__c</fullName>
        <label>Recommended Rider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accidental Disability</fullName>
                </value>
                <value>
                    <fullName>Waiver of Premium</fullName>
                </value>
                <value>
                    <fullName>Critical Illness</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <label>Rider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_Insured_Amount__c</fullName>
        <formula>Case(Sum_Insured__c,
&quot;$50,000 - $70,000&quot;,60000,
&quot;$70,001 - $100,000&quot;,85000,
&quot;$100,001 - $200,000&quot;,150000,
&quot;$200,001 - $250,000&quot;,225000,
&quot;$250,001 - $399,000&quot;,275000,
60000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Insured Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Insured__c</fullName>
        <label>Sum Insured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$50,000 - $70,000</fullName>
                </value>
                <value>
                    <fullName>$70,001 - $100,000</fullName>
                </value>
                <value>
                    <fullName>$100,001 - $200,000</fullName>
                </value>
                <value>
                    <fullName>$200,001 - $250,000</fullName>
                </value>
                <value>
                    <fullName>$250,001 - $399,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <label>Term Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tobacco_Nicotine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco/Nicotine</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>